# hermes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: references.bib
docs/paper/: hermes_paper.tex
examples/: publisher.c  subscriber.c
include/: hermes.h
proto/: heartbeat.proto
